--- a/WiseRunner/Base.lproj/Main.storyboard
+++ b/WiseRunner/Base.lproj/Main.storyboard
@@ -1,8 +1,58 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="9zA-mA-Wse">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="FI7-oj-frl">
+            <objects>
+                <navigationController toolbarHidden="NO" id="9zA-mA-Wse" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xYV-5D-25T">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Szb-3J-ONb">
+                        <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="xM8-mh-c8W" kind="relationship" relationship="rootViewController" id="Qbd-hC-wTV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v0x-Yr-oxW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="225" y="613"/>
+        </scene>
+        <!--WiseRunner-->
+        <scene sceneID="owf-Kl-IXQ">
+            <objects>
+                <tableViewController id="xM8-mh-c8W" customClass="StartWorkoutTableViewController" customModule="WiseRunner" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="84" sectionHeaderHeight="28" sectionFooterHeight="28" id="m6S-go-Kmk">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <connections>
+                            <outlet property="dataSource" destination="xM8-mh-c8W" id="n4b-cm-3zX"/>
+                            <outlet property="delegate" destination="xM8-mh-c8W" id="Ghl-Ff-EQ7"/>
+                        </connections>
+                    </tableView>
+                    <toolbarItems>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="x1v-Q2-CvN"/>
+                        <barButtonItem title="Start Workout" id="b0m-6S-mz1">
+                            <connections>
+                                <action selector="startWorkoutButtonPressed:" destination="xM8-mh-c8W" id="Kg5-Uq-LbG"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="BSI-8g-fSC"/>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" title="WiseRunner" id="XaK-dX-mmO"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3ed-FP-dgx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="928" y="613"/>
+        </scene>
+    </scenes>
 </document>
