--- a/WiseRunner/WorkoutCell.xib
+++ b/WiseRunner/WorkoutCell.xib
@@ -8,30 +8,89 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="65" id="KGk-i7-Jjw" customClass="WorkoutCell" customModule="WiseRunner" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="328" height="65"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="125" id="KGk-i7-Jjw" customClass="WorkoutCell" customModule="WiseRunner" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="393" height="125"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="328" height="64"/>
+                <rect key="frame" x="0.0" y="0.0" width="360" height="124"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="niq-uz-uqy">
-                        <rect key="frame" x="8" y="21" width="42" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="niq-uz-uqy">
+                        <rect key="frame" x="8" y="8" width="38" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="highlightedColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jI6-ys-fIa">
+                        <rect key="frame" x="8" y="37" width="38" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="highlightedColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DA4-pj-jUw">
+                        <rect key="frame" x="8" y="66" width="67" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="highlightedColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Avg. speed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sJT-cU-TkO">
+                        <rect key="frame" x="8" y="95" width="85" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="highlightedColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Running" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="46f-DP-DCX">
+                        <rect key="frame" x="122" y="8" width="63" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHD-Zm-EBq">
+                        <rect key="frame" x="122" y="37" width="46" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eO4-LD-l3I">
+                        <rect key="frame" x="122" y="66" width="24" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cty-g9-BWm">
+                        <rect key="frame" x="122" y="95" width="24" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="niq-uz-uqy" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="BGU-jL-AcS"/>
-                    <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="niq-uz-uqy" secondAttribute="trailing" constant="20" id="k1k-nt-RMe"/>
-                    <constraint firstAttribute="leadingMargin" secondItem="niq-uz-uqy" secondAttribute="leading" id="lnT-6c-MU4"/>
+                    <constraint firstItem="46f-DP-DCX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="114" id="1ib-a1-G2H"/>
+                    <constraint firstItem="jI6-ys-fIa" firstAttribute="top" secondItem="niq-uz-uqy" secondAttribute="bottom" constant="8" id="2Iw-rS-Dgl"/>
+                    <constraint firstItem="niq-uz-uqy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="4UI-e5-P7h"/>
+                    <constraint firstItem="sJT-cU-TkO" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="9PO-Hs-Vxe"/>
+                    <constraint firstItem="sJT-cU-TkO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="BwP-ko-mIt"/>
+                    <constraint firstItem="niq-uz-uqy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Cd1-JC-lsk"/>
+                    <constraint firstItem="jI6-ys-fIa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Izp-Gf-Dng"/>
+                    <constraint firstItem="Cty-g9-BWm" firstAttribute="leading" secondItem="46f-DP-DCX" secondAttribute="leading" id="Lgv-U5-m8v"/>
+                    <constraint firstItem="DA4-pj-jUw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="N0D-kZ-SW7"/>
+                    <constraint firstItem="jHD-Zm-EBq" firstAttribute="top" secondItem="46f-DP-DCX" secondAttribute="bottom" constant="8" id="Nw3-hU-Olx"/>
+                    <constraint firstItem="eO4-LD-l3I" firstAttribute="top" secondItem="jHD-Zm-EBq" secondAttribute="bottom" constant="8" id="OE4-07-9ie"/>
+                    <constraint firstItem="DA4-pj-jUw" firstAttribute="top" secondItem="jI6-ys-fIa" secondAttribute="bottom" constant="8" id="SNd-FT-Kv2"/>
+                    <constraint firstItem="Cty-g9-BWm" firstAttribute="top" secondItem="eO4-LD-l3I" secondAttribute="bottom" constant="8" id="Shp-ZC-t66"/>
+                    <constraint firstItem="sJT-cU-TkO" firstAttribute="top" secondItem="DA4-pj-jUw" secondAttribute="bottom" constant="8" id="fBJ-9L-ZoT"/>
+                    <constraint firstItem="jHD-Zm-EBq" firstAttribute="leading" secondItem="46f-DP-DCX" secondAttribute="leading" id="gtR-TW-U0P"/>
+                    <constraint firstItem="eO4-LD-l3I" firstAttribute="leading" secondItem="46f-DP-DCX" secondAttribute="leading" id="qhm-M7-w6c"/>
+                    <constraint firstAttribute="topMargin" secondItem="46f-DP-DCX" secondAttribute="top" id="w3k-Dc-EY2"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="typeLabel" destination="niq-uz-uqy" id="dM6-TX-KIA"/>
+                <outlet property="averageSpeedLabel" destination="Cty-g9-BWm" id="w5w-O8-fCE"/>
+                <outlet property="distanceLabel" destination="eO4-LD-l3I" id="gv2-lI-GEL"/>
+                <outlet property="timeLabel" destination="jHD-Zm-EBq" id="HXV-oF-fhJ"/>
+                <outlet property="typeLabel" destination="46f-DP-DCX" id="upi-5E-MSt"/>
             </connections>
-            <point key="canvasLocation" x="604" y="503.5"/>
+            <point key="canvasLocation" x="589.5" y="482.5"/>
         </tableViewCell>
     </objects>
 </document>
